{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 92,
  "lineage": "ceae3dd9-b152-6bb6-e7c7-8064764aeec5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:859466819757:route-table/rtb-07854da4813362f13",
            "default_route_table_id": "rtb-07854da4813362f13",
            "id": "rtb-07854da4813362f13",
            "owner_id": "859466819757",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0853a3962e487b69d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default route table",
              "env": "k8s"
            },
            "tags_all": {
              "Name": "default route table",
              "env": "k8s"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee76db1a47866fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:859466819757:internet-gateway/igw-0853a3962e487b69d",
            "id": "igw-0853a3962e487b69d",
            "owner_id": "859466819757",
            "tags": {
              "Env": "k8s",
              "Name": "k8s_gw"
            },
            "tags_all": {
              "Env": "k8s",
              "Name": "k8s_gw"
            },
            "vpc_id": "vpc-0ee76db1a47866fe0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mgainutdinov-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:859466819757:loadbalancer/app/mgainutdinov-elb/2e30b0907cd8d561",
            "arn_suffix": "app/mgainutdinov-elb/2e30b0907cd8d561",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mgainutdinov-elb-401172597.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:859466819757:loadbalancer/app/mgainutdinov-elb/2e30b0907cd8d561",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mgainutdinov-elb",
            "security_groups": [
              "sg-0c66e37743f3d9e91"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0553160bef4da3028"
              },
              {
                "subnet_id": "subnet-0d6bc6c9193f079a3"
              },
              {
                "subnet_id": "subnet-0f35d9927255de5a6"
              }
            ],
            "subnets": [
              "subnet-0553160bef4da3028",
              "subnet-0d6bc6c9193f079a3",
              "subnet-0f35d9927255de5a6"
            ],
            "vpc_id": "vpc-0ee76db1a47866fe0",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.allow-http-ssh",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mgainutdinov_elb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:859466819757:listener/app/mgainutdinov-elb/2e30b0907cd8d561/266db9a1fc4a4e5c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:859466819757:targetgroup/mgainutdinov-target-group/8d971c33b822a81e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:859466819757:listener/app/mgainutdinov-elb/2e30b0907cd8d561/266db9a1fc4a4e5c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:859466819757:loadbalancer/app/mgainutdinov-elb/2e30b0907cd8d561",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mgainutdinov-elb",
            "aws_lb_target_group.mgainutdinov-target-group",
            "aws_security_group.allow-http-ssh",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mgainutdinov-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:859466819757:targetgroup/mgainutdinov-target-group/8d971c33b822a81e",
            "arn_suffix": "targetgroup/mgainutdinov-target-group/8d971c33b822a81e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:859466819757:targetgroup/mgainutdinov-target-group/8d971c33b822a81e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mgainutdinov-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ee76db1a47866fe0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-http-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:859466819757:security-group/sg-0c66e37743f3d9e91",
            "description": "SSH and HTTP allow",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c66e37743f3d9e91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220521124650569700000001",
            "name_prefix": "terraform-",
            "owner_id": "859466819757",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ee76db1a47866fe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:859466819757:subnet/subnet-0d6bc6c9193f079a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6bc6c9193f079a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859466819757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cloudcasts-1-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "us-west-2a-1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cloudcasts-1-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "us-west-2a-1"
            },
            "vpc_id": "vpc-0ee76db1a47866fe0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:859466819757:subnet/subnet-0f35d9927255de5a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.11.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f35d9927255de5a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859466819757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cloudcasts-2-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "us-west-2b-2"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cloudcasts-2-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "us-west-2b-2"
            },
            "vpc_id": "vpc-0ee76db1a47866fe0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:859466819757:subnet/subnet-0553160bef4da3028",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.11.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0553160bef4da3028",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859466819757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "cloudcasts-3-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "us-west-2c-3"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "cloudcasts-3-public-subnet",
              "Project": "cloudcasts.io",
              "Role": "public",
              "Subnet": "us-west-2c-3"
            },
            "vpc_id": "vpc-0ee76db1a47866fe0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:859466819757:vpc/vpc-0ee76db1a47866fe0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0ce2da9707fb34502",
            "default_route_table_id": "rtb-07854da4813362f13",
            "default_security_group_id": "sg-08a28055b0493ceba",
            "dhcp_options_id": "dopt-01c470c960c1234fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ee76db1a47866fe0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07854da4813362f13",
            "owner_id": "859466819757",
            "tags": {
              "Env": "k8s",
              "Name": "k8s_vpc"
            },
            "tags_all": {
              "Env": "k8s",
              "Name": "k8s_vpc"
            }
          }
        }
      ]
    }
  ]
}